package com.weddingplanner.server.interceptor;

public class RegistrationInterceptor {
}
