@startuml

title __INTERCEPTOR's Class Diagram__\n

  namespace  {
    namespace om.weddingplanner.server {
      namespace interceptor {
        class com.weddingplanner.server.interceptor.MobileRequestInterceptor {
            + preHandle()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace interceptor {
        class com.weddingplanner.server.interceptor.RegistrationInterceptor {
            + preHandle()
        }
      }
    }
  }
  

  com.weddingplanner.server.interceptor.MobileRequestInterceptor -up-|> org.springframework.web.servlet.handler.HandlerInterceptorAdapter
  com.weddingplanner.server.interceptor.RegistrationInterceptor -up-|> org.springframework.web.servlet.handler.HandlerInterceptorAdapter
  com.weddingplanner.server.interceptor.RegistrationInterceptor o-- com.weddingplanner.server.services.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
